updated info on hw8 index
title is self expln

--- a/hw8/index.html
+++ b/hw8/index.html
@@ -75,6 +75,10 @@
         <div class="info">
             <h1>Info about API:</h1>
             <h2>This API fetches facts about several animals. Pretty neat! Above, I've picked 5 random animals. </h2>
+            <h2> I found it on the public API github repo <a href="https://github.com/public-apis/public-apis" target="_blank">Public APIs</a> </h2>
+            <h2> I set the API to retrieve 5 animals along with their facts. I could retrieve more or less if I wanted to. </h2>
+            <h2> One use is for young students to learn about animals. </h2>
+            <h2> Another more niche use is to use this API to build a animal trivia app. </h2> 
         </div>
     </div>
 </body>
